@@ -43,10 +43,10 @@ public class TestPeriodicGC {
 
         OutputAnalyzer output = new OutputAnalyzer(pb.start());
         output.shouldHaveExitValue(0);
-        if (periodic && !output.getOutput().contains("Periodic GC")) {
+        if (periodic && !output.getOutput().contains("Trigger: Time since last GC")) {
             throw new AssertionError(msg + ": Should have periodic GC in logs");
         }
-        if (!periodic && output.getOutput().contains("Periodic GC")) {
+        if (!periodic && output.getOutput().contains("Trigger: Time since last GC")) {
             throw new AssertionError(msg + ": Should not have periodic GC in logs");
         }
     }
@@ -71,7 +71,7 @@ public class TestPeriodicGC {
         for (String h : enabled) {
             testWith("Short period with " + h,
                 true,
-                "-XX:+PrintGCDetails",
+                "-verbose:gc",
                 "-XX:+UseShenandoahGC",
                 "-XX:+UnlockDiagnosticVMOptions",
                 "-XX:+UnlockExperimentalVMOptions",
@@ -81,7 +81,7 @@ public class TestPeriodicGC {
 
             testWith("Long period with " + h,
                 false,
-                "-XX:+PrintGCDetails",
+                "-verbose:gc",
                 "-XX:+UseShenandoahGC",
                 "-XX:+UnlockDiagnosticVMOptions",
                 "-XX:+UnlockExperimentalVMOptions",
@@ -93,7 +93,7 @@ public class TestPeriodicGC {
         for (String h : disabled) {
             testWith("Short period with " + h,
                 false,
-                "-XX:+PrintGCDetails",
+                "-verbose:gc",
                 "-XX:+UseShenandoahGC",
                 "-XX:+UnlockDiagnosticVMOptions",
                 "-XX:+UnlockExperimentalVMOptions",
